mensagem de lista vazia

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,10 @@
     min-height: 600px;
 }
 
+.table-hover tbody tr.userList-empty:hover{
+    background-color: transparent;
+}
+
 .table-overflow {
     max-height:450px;
     overflow-x:auto;
